--- a/space traveling/index.html
+++ b/space traveling/index.html
@@ -6,21 +6,30 @@
     <title>Document</title>
 </head>
 <body>
-    <ul>
+     <ul>
         <li><h4><a href="#">Основные типы космических ракет</a></h4></li>
         <li><h4><a href="./forms.html">Списки лучших космических ракет для путешествий</a></h4></li>
     </ul>  
     <hr>
 
     <p align="center">
-        <a href="./object1.html"><img src="https://icdn.lenta.ru/images/2021/04/29/21/20210429211001209/pic_25688440a48a61637c4b3108521a0f5a.jpg" width="20%" vspace="10" hspace="23" border="5"></a>
-        <a href="./object2.html"><img src="https://www.interfax.ru/ftproot/textphotos/2025/05/30/falkon700.jpg" width="21%" vspace="10" hspace="23" border="5"></a>
-        <a href="./object3.html"><img src="https://media.cnn.com/api/v1/images/stellar/prod/191227140718-china-rocket-long-march-5-1221-restricted.jpg?q=w_3000,h_2000,x_0,y_0,c_fill" width="20.2%" vspace="10" hspace="23" border="5"></a>
-        <a href="./object4.html"><img src="https://www.usatoday.com/gcdn/authoring/authoring-images/2024/10/14/USAT/75668857007-20241014-t-023009-z-584409215-rc-2-jjaanp-0-v-0-rtrmadp-3-spaceexplorationstarship.JPG?crop=5499,3094,x0,y366&width=660&height=371&format=pjpg&auto=webp" width="24%" vspace="10" hspace="23" border="5"></a>
+        <a href="./object1.html">
+            <img src="https://icdn.lenta.ru/images/2021/04/29/21/20210429211001209/pic_25688440a48a61637c4b3108521a0f5a.jpg" width="20%" vspace="10" hspace="23" border="5" alt="Ракета 1">
+        </a>
+        <a href="./object2.html">
+            <img src="https://www.interfax.ru/ftproot/textphotos/2025/05/30/falkon700.jpg" width="21%" vspace="10" hspace="23" border="5" alt="Ракета 2">
+        </a>
+        <a href="./object3.html">
+            <img src="https://media.cnn.com/api/v1/images/stellar/prod/191227140718-china-rocket-long-march-5-1221-restricted.jpg?q=w_3000,h_2000,x_0,y_0,c_fill" width="20.2%" vspace="10" hspace="23" border="5" alt="Ракета 3">
+        </a>
+        <a href="./object4.html">
+            <img src="https://www.usatoday.com/gcdn/authoring/authoring-images/2024/10/14/USAT/75668857007-20241014-t-023009-z-584409215-rc-2-jjaanp-0-v-0-rtrmadp-3-spaceexplorationstarship.JPG?crop=5499,3094,x0,y366&width=660&height=371&format=pjpg&auto=webp" width="24%" vspace="10" hspace="23" border="5" alt="Ракета 4">
+        </a>
     </p>
     <hr>
+
     <p>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/4/40/Delta_M%2C_NATO_SATCOM%2C_20_March_1970_%28cropped%29.jpg" border="5" width="20%" align="middle">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/4/40/Delta_M%2C_NATO_SATCOM%2C_20_March_1970_%28cropped%29.jpg" border="5" width="20%" align="middle" alt="Малая ракета">
         <strong><u>Ракеты малой дальности (лёгкие носители)</u></strong>
     </p>
     <ul>
@@ -42,7 +51,8 @@
         </li>
     </ul><br>
 
-    <img src="https://www.platcdarm.ru/upload/iblock/422/ufgknqoh.jpg" border="5" width="17%" align="middle">
+    <p>
+        <img src="https://www.platcdarm.ru/upload/iblock/422/ufgknqoh.jpg" border="5" width="17%" align="middle" alt="Средняя ракета">
         <strong><u>Средние ракеты</u></strong>
     </p>
     <ul>
@@ -63,7 +73,8 @@
         </li>
     </ul><br>
 
-    <img src="https://vpk.name/file/img/proton-m_090713.jpg" border="5" width="17%" align="middle">
+    <p>
+        <img src="https://vpk.name/file/img/proton-m_090713.jpg" border="5" width="17%" align="middle" alt="Тяжёлая ракета">
         <strong><u>Тяжёлые ракеты</u></strong>
     </p>
     <ul>
@@ -84,7 +95,8 @@
         </li>
     </ul><br>
 
-    <img src="https://www.ixbt.com/img/n1/news/2024/10/5/ixbtmedia_giant_russian_space_rocket_launch_photo_--v_6.1_9bb6a1ec-6c66-4ff1-8d54-2118de4139aa_3_large.png" border="5" width="17%" align="middle">
+     <p>
+        <img src="https://www.ixbt.com/img/n1/news/2024/10/5/ixbtmedia_giant_russian_space_rocket_launch_photo_--v_6.1_9bb6a1ec-6c66-4ff1-8d54-2118de4139aa_3_large.png" border="5" width="17%" align="middle" alt="Сверхтяжёлая ракета">
         <strong><u>Сверхтяжёлые ракеты</u></strong>
     </p>
     <ul>
@@ -107,8 +119,9 @@
         </li>
     </ul><br>
     <hr>
+
+    <footer>
+        <p align="right"><strong>Разработчик:</strong> <i>Кошевой П.О. 6 подгруппа Б9123-09.03.04</i></p>
+    </footer>
 </body>
-<footer>
-    <p align="right"><strong>Разработчик:</strong> <i>Кошевой П.О. 6 подгруппа Б9123-09.03.04</i></p>
-</footer>
 </html>
