--- a/space traveling/object1.html
+++ b/space traveling/object1.html
@@ -13,7 +13,7 @@
     <hr>
     
     <p>
-        <img src="https://icdn.lenta.ru/images/2021/04/29/21/20210429211001209/pic_25688440a48a61637c4b3108521a0f5a.jpg" border="5" width="25%" align="middle">
+        <img src="https://icdn.lenta.ru/images/2021/04/29/21/20210429211001209/pic_25688440a48a61637c4b3108521a0f5a.jpg" border="5" width="25%" align="middle" alt="Ракета Electron">
         <strong><u>Лёгкий носитель — Electron (Rocket Lab, Новая Зеландия/США)</u></strong>
     </p>
     <ul>
@@ -28,8 +28,9 @@
         <li><strong>Гипотетическая роль:</strong> массовые перевозки людей и грузов в рамках колонизации <strong>Луны</strong> и <strong>Марса</strong>.</li>
     </ul>
     <hr>
+
+    <footer>
+        <p align="right"><strong>Разработчик:</strong> <i>Кошевой П.О. 6 подгруппа Б9123-09.03.04</i></p>
+    </footer>
 </body>
-<footer>
-    <p align="right"><strong>Разработчик:</strong> <i>Кошевой П.О. 6 подгруппа Б9123-09.03.04</i></p>
-</footer>
 </html>
