--- a/space traveling/object2.html
+++ b/space traveling/object2.html
@@ -13,7 +13,7 @@
     <hr>
     
     <p>
-        <img src="https://www.interfax.ru/ftproot/textphotos/2025/05/30/falkon700.jpg" border="5" width="25%" align="middle">
+        <img src="https://www.interfax.ru/ftproot/textphotos/2025/05/30/falkon700.jpg" border="5" width="25%" align="middle" alt="Ракета Falcon 9">
         <strong><u>Средний носитель — Falcon 9 (SpaceX, США)</u></strong>
     </p>
     <ul>
@@ -28,8 +28,9 @@
         <li><strong>Гипотетическая роль:</strong> «<i>космический грузовик</i>», основной транспорт между <strong>Землёй</strong>, <strong>орбитой</strong> и <strong>Лунной базой</strong>.</li>
     </ul>
     <hr>
+
+    <footer>
+        <p align="right"><strong>Разработчик:</strong> <i>Кошевой П.О. 6 подгруппа Б9123-09.03.04</i></p>
+    </footer>
 </body>
-<footer>
-    <p align="right"><strong>Разработчик:</strong> <i>Кошевой П.О. 6 подгруппа Б9123-09.03.04</i></p>
-</footer>
 </html>
