--- a/space traveling/object4.html
+++ b/space traveling/object4.html
@@ -13,14 +13,14 @@
     <hr>
     
     <p>
-        <img src="https://www.usatoday.com/gcdn/authoring/authoring-images/2024/10/14/USAT/75668857007-20241014-t-023009-z-584409215-rc-2-jjaanp-0-v-0-rtrmadp-3-spaceexplorationstarship.JPG?crop=5499,3094,x0,y366&width=660&height=371&format=pjpg&auto=webp" border="5" width="28%" align="middle">
+        <img src="https://www.usatoday.com/gcdn/authoring/authoring-images/2024/10/14/USAT/75668857007-20241014-t-023009-z-584409215-rc-2-jjaanp-0-v-0-rtrmadp-3-spaceexplorationstarship.JPG?crop=5499,3094,x0,y366&width=660&height=371&format=pjpg&auto=webp" border="5" width="28%" align="middle" alt="Сверхтяжёлый носитель Starship">
         <strong><u>Сверхтяжёлый носитель — Starship (SpaceX, США)</u></strong>
     </p>
     <ul>
         <li><strong>Грузоподъёмность: </strong> до <strong>150 тонн</strong> (многоразовая система).</li>
         <li><strong>Почему лучший:</strong>
             <ul>
-                <li>Полностью многоразовый (в теории).</strong>.</li>
+                <li>Полностью многоразовый (в теории).</li>
                 <li>Разработан именно для перевозки людей и грузов на <strong>Луну</strong> и <strong>Марс</strong>.</li>
                 <li>Имеет огромный внутренний объём — можно не только возить грузы, но и обустраивать «<i>космический лайнер</i>».</li>
             </ul>
@@ -28,8 +28,9 @@
         <li><strong>Гипотетическая роль:</strong> массовые перевозки людей и грузов в рамках колонизации <strong>Луны</strong> и <strong>Марса</strong>.</li>
     </ul>
     <hr>
+
+    <footer>
+        <p align="right"><strong>Разработчик:</strong> <i>Кошевой П.О. 6 подгруппа Б9123-09.03.04</i></p>
+    </footer>
 </body>
-<footer>
-    <p align="right"><strong>Разработчик:</strong> <i>Кошевой П.О. 6 подгруппа Б9123-09.03.04</i></p>
-</footer>
 </html>
