--- a/space traveling/object3.html
+++ b/space traveling/object3.html
@@ -13,7 +13,7 @@
     <hr>
     
     <p>
-        <img src="https://media.cnn.com/api/v1/images/stellar/prod/191227140718-china-rocket-long-march-5-1221-restricted.jpg?q=w_3000,h_2000,x_0,y_0,c_fill" border="5" width="25%" align="middle">
+        <img src="https://media.cnn.com/api/v1/images/stellar/prod/191227140718-china-rocket-long-march-5-1221-restricted.jpg?q=w_3000,h_2000,x_0,y_0,c_fill" border="5" width="25%" align="middle" alt="Ракета Long March 5">
         <strong><u>Тяжёлый носитель — Long March 5 (Китай)</u></strong>
     </p>
     <ul>
@@ -28,8 +28,9 @@
         <li><strong>Гипотетическая роль:</strong> «<i>космический грузовик</i>», основной транспорт между <strong>Землёй</strong>, <strong>орбитой</strong> и <strong>Лунной базой</strong>.</li>
     </ul>
     <hr>
+
+    <footer>
+        <p align="right"><strong>Разработчик:</strong> <i>Кошевой П.О. 6 подгруппа Б9123-09.03.04</i></p>
+    </footer>
 </body>
-<footer>
-    <p align="right"><strong>Разработчик:</strong> <i>Кошевой П.О. 6 подгруппа Б9123-09.03.04</i></p>
-</footer>
 </html>
