--- a/space traveling/forms.html
+++ b/space traveling/forms.html
@@ -134,10 +134,10 @@
         <tr><td>GSLV Mk III</td><td>Тяжелая</td><td>Индия</td><td>50</td><td>140</td><td>8.0</td><td>10000000</td><td>2025-10-14</td></tr>
 
         <tr><td>Ariane 5</td><td>Тяжелая</td><td>Европа</td><td>47</td><td>120</td><td>8.0</td><td>130</td><td>2025-01-20</td></tr>
-        <tr><td>Ariane 6</td><td>Тяжелая</td><td>Европа</td><td>50</td><td>125</td><td>8.2</td><td>1400/td><td>2025-02-25</td></tr>
+        <tr><td>Ariane 6</td><td>Тяжелая</td><td>Европа</td><td>50</td><td>125</td><td>8.2</td><td>1400><td>2025-02-25</td></tr>
         <tr><td>Vega</td><td>Малая</td><td>Европа</td><td>2</td><td>8</td><td>7.5</td><td>10000</td><td>2025-03-18</td></tr>
         <tr><td>Electron</td><td>Малая</td><td>Новая Зеландия</td><td>1.5</td><td>7</td><td>7.4</td><td>900</td><td>2025-04-22</td></tr>
-        <tr><td>Delta IV Heavy</td><td>Сверхтяжёлая</td><td>США</td><td>28</td><td>120</td><td>8.1</td><td>2000/td><td>2025-05-30</td></tr>
+        <tr><td>Delta IV Heavy</td><td>Сверхтяжёлая</td><td>США</td><td>28</td><td>120</td><td>8.1</td><td>2000><td>2025-05-30</td></tr>
         <tr><td>Atlas V</td><td>Тяжелая</td><td>США</td><td>20</td><td>100</td><td>7.9</td><td>110</td><td>2025-06-05</td></tr>
         <tr><td>Tianlong-1</td><td>Малая</td><td>Китай</td><td>5</td><td>12</td><td>7.7</td><td>15000</td><td>2025-07-12</td></tr>
         <tr><td>Shenzhou Rocket</td><td>Средняя</td><td>Китай</td><td>18</td><td>50</td><td>8.0</td><td>500</td><td>2025-08-20</td></tr>
