--- a/Lab 1/index.html
+++ b/Lab 1/index.html
@@ -25,7 +25,7 @@ else:
         <option value="1">1</option>
         <option value="2">2</option>
     </select><code>) + ":"))
-        if max &lt; </code><input type="number" style="width:4em;"><code> number:
+        if max &lt; </code><input type="number" min="2" max="4000"><code> number:
             max = number
     print("Максимальное значение: ", max)</code></pre>
 
