--- a/space traveling/forms.html
+++ b/space traveling/forms.html
@@ -15,19 +15,19 @@
     <details>
         <summary><strong>График</strong></summary>
         <form>
+            <p><strong>По оси X:</strong></p>
+
             <p>
                 <input type="radio" name="ox" id="type">
                 <label for="type">Тип</label>
             </p>
             <p>
                 <input type="radio" name="ox" id="payload">
-                <label for="payload">Грузоподъёмность</label>
-            </p>
-            <p>
-                <input type="radio" name="ox" id="range">
-                <label for="range">Дальность</label>
+                <label for="payload">Страна</label>
             </p>
 
+            <p><strong>По оси Y:</strong></p>
+            
             <p>
                 <input type="checkbox" name="result1" id="max_range">
                 <label for="max_range">Максимальная дальность хода</label>
