--- a/space traveling/object3.html
+++ b/space traveling/object3.html
@@ -13,7 +13,7 @@
     <hr>
     
     <p>
-        <img src="https://media.cnn.com/api/v1/images/stellar/prod/191227140718-china-rocket-long-march-5-1221-restricted.jpg?q=w_3000,h_2000,x_0,y_0,c_fill" border="5" width="25%" align="middle" alt="Ракета Long March 5">
+        <img src="./imgs/rocket_3.jpg" border="5" width="25%" align="middle" alt="Ракета Long March 5">
         <strong><u>Тяжёлый носитель — Long March 5 (Китай)</u></strong>
     </p>
     <ul>
