--- a/space traveling/object4.html
+++ b/space traveling/object4.html
@@ -13,7 +13,7 @@
     <hr>
     
     <p>
-        <img src="https://www.usatoday.com/gcdn/authoring/authoring-images/2024/10/14/USAT/75668857007-20241014-t-023009-z-584409215-rc-2-jjaanp-0-v-0-rtrmadp-3-spaceexplorationstarship.JPG?crop=5499,3094,x0,y366&width=660&height=371&format=pjpg&auto=webp" border="5" width="28%" align="middle" alt="Сверхтяжёлый носитель Starship">
+        <img src="./imgs/rocket_4.jpg" border="5" width="28%" align="middle" alt="Сверхтяжёлый носитель Starship">
         <strong><u>Сверхтяжёлый носитель — Starship (SpaceX, США)</u></strong>
     </p>
     <ul>
