--- a/space traveling/index.html
+++ b/space traveling/index.html
@@ -1,127 +1,141 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Космические ракеты</title>
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-     <ul>
-        <li><h4><a href="#">Основные типы космических ракет</a></h4></li>
-        <li><h4><a href="./forms.html">Списки лучших космических ракет для путешествий</a></h4></li>
-    </ul>  
-    <hr>
 
-    <p align="center">
-        <a href="./object1.html">
-            <img src="https://icdn.lenta.ru/images/2021/04/29/21/20210429211001209/pic_25688440a48a61637c4b3108521a0f5a.jpg" width="20%" vspace="10" hspace="23" border="5" alt="Ракета 1">
-        </a>
-        <a href="./object2.html">
-            <img src="https://www.interfax.ru/ftproot/textphotos/2025/05/30/falkon700.jpg" width="21%" vspace="10" hspace="23" border="5" alt="Ракета 2">
-        </a>
-        <a href="./object3.html">
-            <img src="https://media.cnn.com/api/v1/images/stellar/prod/191227140718-china-rocket-long-march-5-1221-restricted.jpg?q=w_3000,h_2000,x_0,y_0,c_fill" width="20.2%" vspace="10" hspace="23" border="5" alt="Ракета 3">
-        </a>
-        <a href="./object4.html">
-            <img src="https://www.usatoday.com/gcdn/authoring/authoring-images/2024/10/14/USAT/75668857007-20241014-t-023009-z-584409215-rc-2-jjaanp-0-v-0-rtrmadp-3-spaceexplorationstarship.JPG?crop=5499,3094,x0,y366&width=660&height=371&format=pjpg&auto=webp" width="24%" vspace="10" hspace="23" border="5" alt="Ракета 4">
-        </a>
-    </p>
-    <hr>
+<header>
+    <div class="hat">
+        <h1>Космические путешествия</h1>
+        <div>
+            <div class="menu active">Меню 1</div>
+            <div class="menu">Меню 2</div>
+            <div class="menu">Меню 3</div>
+            <div class="menu">Меню 4</div>
+        </div>
+    </div>
+</header>
 
-    <p>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/4/40/Delta_M%2C_NATO_SATCOM%2C_20_March_1970_%28cropped%29.jpg" border="5" width="20%" align="middle" alt="Малая ракета">
-        <strong><u>Ракеты малой дальности (лёгкие носители)</u></strong>
-    </p>
-    <ul>
-        <li><strong>Грузоподъёмность: до 2 тонн</strong> на низкую околоземную орбиту (НОО).</li>
-        <li><strong>Назначение:</strong> вывод небольших спутников (<i>коммуникационных, метеорологических, военных, навигационных</i>), микроспутников и группировок «<i>кубсатов</i>».</li>
-        <li><strong>Особенности:</strong>
-            <ul>
-                <li>Чаще всего имеют 2–3 ступени.</li>
-                <li>Используются для коммерческих пусков и быстрых запусков лёгких аппаратов.</li>
-                <li>Запуск обычно дешевле и проще в организации.</li>
-            </ul>
-        </li>
-        <li><strong>Примеры:</strong>
-            <ul>
-                <li>российская «<i>Союз-2.1в</i>» (до 2 т),</li>
-                <li>американская <i>Electron</i> (300 кг),</li>
-                <li>индийская <i>PSLV Light</i>.</li>
-            </ul>
-        </li>
-    </ul><br>
+<div class="wrap">
+    <div class="left">
+        <img src="./imgs/dmg_4.jpg" alt="Космический фон" class="wrap-img">
+    </div>
+    <div class="right">
+        <div class="top">
+            <img src="./imgs/dmg_2.jpg" alt="Космический фон" class="wrap-img">
+        </div>
+        <div class="mid">
+            <div class="mid-left">
+                <img src="./imgs/dmg_3.jpg" alt="Космический фон" class="wrap-img">
+            </div>
+            <div class="mid-right">
+                <img src="./imgs/dmg_1.jpg" alt="Космический фон" class="wrap-img">
+            </div>
+        </div>
+        <div class="bottom">
+            <div class="bottom-left">
+                <img src="./imgs/dmg_5.jpg" alt="Космический фон" class="wrap-img">
+            </div>
+            <div class="bottom-right">
+                <img src="./imgs/dmg_6.jpg" alt="Космический фон" class="wrap-img">
+            </div>
+        </div>
+    </div>
+</div>
 
-    <p>
-        <img src="https://www.platcdarm.ru/upload/iblock/422/ufgknqoh.jpg" border="5" width="17%" align="middle" alt="Средняя ракета">
-        <strong><u>Средние ракеты</u></strong>
-    </p>
-    <ul>
-        <li><strong>Грузоподъёмность: 2–20 тонн</strong> на НОО.</li>
-        <li><strong>Назначение:</strong> запуск навигационных систем, пилотируемых кораблей, научных аппаратов и средних грузов к МКС.</li>
-        <li><strong>Особенности:</strong>
-            <ul>
-                <li>Могут работать как на НОО, так и на геопереходную орбиту (ГПО).</li>
-                <li>Часто являются «<i>рабочими лошадками</i>» космонавтики.</li>
-            </ul>
-        </li>
-        <li><strong>Примеры:</strong>
-            <ul>
-                <li>российский «<i>Союз-2</i>» (до 8 т),</li>
-                <li>американская <i>Falcon 9</i> (22,8 т на НОО в одноразовом варианте),</li>
-                <li>европейская <i>Ariane 5</i> (10 т на ГПО).</li>
-            </ul>
-        </li>
-    </ul><br>
+<div class="container">
 
-    <p>
-        <img src="https://vpk.name/file/img/proton-m_090713.jpg" border="5" width="17%" align="middle" alt="Тяжёлая ракета">
-        <strong><u>Тяжёлые ракеты</u></strong>
-    </p>
-    <ul>
-        <li><strong>Грузоподъёмность: 20–50 тонн</strong> на НОО.</li>
-        <li><strong>Назначение:</strong> доставка больших грузов к <strong>Луне</strong>, <strong>Марсу</strong>, тяжёлых космических станций или модулей для МКС.</li>
-        <li><strong>Особенности:</strong>
-            <ul>
-                <li>Многомоторные ступени, иногда в кластерной схеме (несколько блоков-ускорителей).</li>
-                <li>Часто используются для межпланетных миссий.</li>
-            </ul>
-        </li>
-        <li><strong>Примеры:</strong>
-            <ul>
-                <li>советский «<i>Протон-М</i>» (23 т),</li>
-                <li>американская <i>Delta IV Heavy</i> (28 т),</li>
-                <li>китайская <i>Long March 5</i> (25 т).</li>
-            </ul>
-        </li>
-    </ul><br>
+    <div class="card large">
+        <img src="./imgs/rocket_5.jpg" alt="Основные типы космических ракет" class="pic">
+        <h3>Основные типы космических ракет</h3>
+        <p>Космические ракеты — это мощные транспортные системы, предназначенные для вывода полезных грузов и экипажей за пределы атмосферы. Они бывают одно-, двух- и многоступенчатыми: каждая ступень обеспечивает свой участок полёта</p>
+        <p>По типу используемого топлива ракеты делятся на жидкостные, твёрдотопливные и гибридные. Жидкостные двигатели позволяют регулировать тягу и повторно включать двигатель, твёрдотопливные отличаются простотой и надёжностью, а гибридные сочетают достоинства обеих технологий.</p>
+        <p>Назначение ракет также различается. Одни применяются для вывода спутников связи и навигации на орбиту Земли, другие — для пилотируемых миссий и межпланетных исследований. Существуют также ракеты военного назначения и носители для научных экспериментов.</p>
+        <p>Современные ракеты отличаются высокой степенью автоматизации и точности управления. Благодаря новым материалам и системам навигации они способны доставлять грузы на орбиту с минимальными затратами топлива и с высокой надёжностью.</p>
+        <p>Космическая отрасль развивается стремительно: создаются сверхтяжёлые ракеты для полётов к Луне и Марсу, исследуются новые типы топлива и конструкций. Всё это приближает человечество к эпохе активного освоения дальнего космоса.</p>
+        <p>В будущем ракеты будут использоваться не только для вывода аппаратов, но и как часть глобальной транспортной системы.</p>
+        <p><strong>Списки лучших космических ракет для путешествий</strong></p>
+        <a href="./forms.html" class="left-btn">Подробнее</a>
+    </div>
 
-     <p>
-        <img src="https://www.ixbt.com/img/n1/news/2024/10/5/ixbtmedia_giant_russian_space_rocket_launch_photo_--v_6.1_9bb6a1ec-6c66-4ff1-8d54-2118de4139aa_3_large.png" border="5" width="17%" align="middle" alt="Сверхтяжёлая ракета">
-        <strong><u>Сверхтяжёлые ракеты</u></strong>
-    </p>
-    <ul>
-        <li><strong>Грузоподъёмность:</strong> более <strong>50 тонн</strong> на НОО.</li>
-        <li><strong>Назначение:</strong> межпланетные миссии, пилотируемые полёты на <strong>Луну</strong> и <strong>Марс</strong>, крупные космические аппараты.</li>
-        <li><strong>Особенности:</strong>
-            <ul>
-                <li>Огромные размеры (50–100 м высотой).</li>
-                <li>Обычно проектируются для фундаментальных задач освоения космоса.</li>
-                <li>Стоимость запуска чрезвычайно высока, но они незаменимы для освоения дальнего космоса.</li>
-            </ul>
-        </li>
-        <li><strong>Примеры:</strong>
-            <ul>
-                <li>американская <i>Saturn V</i> (легендарная ракета «Аполлонов», 140 т),</li>
-                <li>новая <i>SpaceX Starship</i> (до 150 т в многоразовом варианте),</li>
-                <li><i>NASA SLS</i> (до 95–130 т),</li>
-                <li>перспективная российская «<i>Енисей</i>» (разрабатывается).</li>
-            </ul>
-        </li>
-    </ul><br>
-    <hr>
+    <div class="right-side">
 
-    <footer>
-        <p align="right"><strong>Разработчик:</strong> <i>Кошевой П.О. 6 подгруппа Б9123-09.03.04</i></p>
-    </footer>
+        <div class="top-right-column">
+            <div class="card pink wide">
+                <h3>Ракеты малой дальности (лёгкие носители)</h3>
+                <p>Грузоподъёмность: до 2 тонн на низкую околоземную орбиту (НОО). Используются для небольших спутников, микроспутников и группировок «кубсатов».</p>
+                <ul>
+                    <li>Чаще всего имеют 2–3 ступени.</li>
+                    <li>Используются для коммерческих пусков и быстрых запусков лёгких аппаратов.</li>
+                    <li>Запуск обычно дешевле и проще в организации.</li>
+                </ul>
+                <p><strong>Примеры:</strong> российская «Союз-2.1в» (до 2 т), американская Electron (300 кг), индийская PSLV Light.</p>
+                <img src="./imgs/rocket_1.jpg" alt="Ракета малой дальности" class="pic">
+                <a href="./object1.html" class="right-btn">Подробнее</a>
+            </div>
+
+            <div class="card blue wide">
+                <h3>Средние ракеты</h3>
+                <p>Грузоподъёмность: 2–20 тонн на НОО. Используются для запуска навигационных систем, пилотируемых кораблей, научных аппаратов и средних грузов к МКС.</p>
+                <ul>
+                    <li>Могут работать как на НОО, так и на геопереходную орбиту (ГПО).</li>
+                    <li>Часто являются «рабочими лошадками» космонавтики.</li>
+                </ul>
+                <p><strong>Примеры:</strong> российский «Союз-2» (до 8 т), американская Falcon 9 (22,8 т на НОО в одноразовом варианте), европейская Ariane 5 (10 т на ГПО).</p>
+                <img src="./imgs/rocket_2.jpg" alt="Средняя ракета" class="pic">
+                <a href="./object2.html" class="left-btn">Подробнее</a>
+            </div>
+        </div>
+
+        <div class="bottom-right-row">
+            <div class="card pink small">
+                <h3>Тяжёлые ракеты</h3>
+                <div class="text-wrapper">
+                    <p>Грузоподъёмность: 20–50 тонн на НОО. Используются для доставки больших грузов к Луне, Марсу, тяжёлых космических станций или модулей для МКС.</p>
+                    <a href="./object3.html" class="link top-right">Подробнее</a>
+                </div>
+                <img src="./imgs/rocket_3.jpg" alt="Тяжелая ракета" class="pic">
+            </div>
+
+            <div class="card pink small">
+                <h3>Тяжёлые ракеты</h3>
+                <div class="text-wrapper">
+                    <p>Особенности: многомоторные ступени, иногда в кластерной схеме. Часто используются для межпланетных миссий.</p>
+                    <p><strong>Примеры:</strong> советский «Протон-М» (23 т), американская Delta IV Heavy (28 т), китайская Long March 5 (25 т).</p>
+                    <a href="./object3.html" class="link top-right">Подробнее</a>
+                </div>
+                <img src="./imgs/rocket_3.jpg" alt="Тяжелая ракета" class="pic">
+            </div>
+
+            <div class="card blue small">
+                <img src="./imgs/rocket_4.jpg" alt="Сверхтяжелая ракета" class="pic">
+                <h3>Сверхтяжёлые ракеты</h3>
+                <div class="text-wrapper">  
+                    <p>Грузоподъёмность: более 50 тонн на НОО. Используются для межпланетных миссий, пилотируемых полётов на Луну и Марс, крупные космические аппараты.</p>
+                    <a href="./object4.html" class="link bottom-left-btn">Подробнее</a>
+                </div>
+            </div>
+
+            <div class="card blue small">
+                <img src="./imgs/rocket_4.jpg" alt="Сверхтяжелая ракета" class="pic">
+                <h3>Сверхтяжёлые ракеты</h3>
+                <div class="text-wrapper">
+                    <p>Особенности: огромные размеры (50–100 м), проектируются для освоения дальнего космоса. Стоимость запуска чрезвычайно высока, но они незаменимы для освоения дальнего космоса.</p>
+                    <p><strong>Примеры:</strong> Saturn V (140 т), SpaceX Starship (до 150 т), NASA SLS (95–130 т), российская «Енисей» (в разработке).</p>
+                    <a href="./object4.html" class="link bottom-left-btn">Подробнее</a>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+<footer>
+    <p align="right"><strong>Разработчик:</strong> <i>Кошевой П.О. 6 подгруппа Б9123-09.03.04</i></p>
+</footer>
 </body>
 </html>
