--- a/space traveling/object1.html
+++ b/space traveling/object1.html
@@ -13,7 +13,7 @@
     <hr>
     
     <p>
-        <img src="https://icdn.lenta.ru/images/2021/04/29/21/20210429211001209/pic_25688440a48a61637c4b3108521a0f5a.jpg" border="5" width="25%" align="middle" alt="Ракета Electron">
+        <img src="./imgs/rocket_1.jpg" border="5" width="25%" align="middle" alt="Ракета Electron">
         <strong><u>Лёгкий носитель — Electron (Rocket Lab, Новая Зеландия/США)</u></strong>
     </p>
     <ul>
