--- a/space traveling/object2.html
+++ b/space traveling/object2.html
@@ -13,7 +13,7 @@
     <hr>
     
     <p>
-        <img src="https://www.interfax.ru/ftproot/textphotos/2025/05/30/falkon700.jpg" border="5" width="25%" align="middle" alt="Ракета Falcon 9">
+        <img src="./imgs/rocket_2.jpg" border="5" width="25%" align="middle" alt="Ракета Falcon 9">
         <strong><u>Средний носитель — Falcon 9 (SpaceX, США)</u></strong>
     </p>
     <ul>
